<resources>
    <string name="app_name">Qwash User</string>
    <string name="hint_email">Email</string>
    <string name="term_login">By Signin your agree with our term and conditions</string>
    <string name="title_activity_home">Map</string>
    <string name="password">Password</string>
    <string name="label_sign_with">or sign in with:</string>
    <string name="dont_have_an_account">Don\'t Have An Account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_register">Register</string>
    <string name="btn_work">Work</string>
    <string name="btn_home">Home</string>
    <string name="btn_my_location">My Location</string>
    <string name="hint_your_location">Your Location</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_contact">Contact</string>
    <string name="button_login">Login</string>
    <string name="help_guide">A guide to Q\'Lap</string>
    <string name="help_call">Call Support</string>
    <string name="title_help">How can we help you?</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="logout">LOGOUT</string>
    <string name="term_of_service">Term of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_my_account">My Account</string>
    <string name="message_denied">Permission \"%1$s\" has been denied.</string>
    <string name="harga_total">Harga Total</string>
    <string name="my_balance">My Balance</string>
    <string name="button_top_up_balance">Top Up Balance</string>
    <string name="type_search">Search …</string>
    <string name="server_unreachable">Oops! Something went wrong.\nPlease check your internet connection.</string>
    <string name="try_again">Try Again</string>
    <string name="title_activity_history">history</string>
    <string name="title_activity_detail_history">Detail History</string>
    <string name="val_email_length">Email must be at least 5 chars and 100 chars length</string>
    <string name="val_email_or_number_length">Email Or Number Phone must be at least 5 chars and 100 chars length</string>
    <string name="val_password_length">Password must be at least 5 chars</string>
    <string name="btn_pick_location">Order here …</string>
    <string name="retry">Retry …</string>
    <string name="hint_email_or_number">Email or Number Phone</string>
    <string name="facebook_app_id">202935096795565</string>
    <string name="detail_notification">Detail Notification</string>
    <string name="hint_number">877–7889–9430</string>
    <string name="requesting">REQUESTING</string>
    <string name="alert_find_washer"><![CDATA[Don\'t give your key car to the washer\nCheck all the equipment in the car\nCheck equipment workers]]></string>
    <string name="title_activity_rating">Rating Your Wash</string>
    <string name="select_address_home">Select Home</string>
    <string name="select_address_work">Select Work</string>
    <string name="title_activity_notification">Notification</string>
    <string name="tagline">WE CLEAN YOUR VEHICLE ANYWHERE ANYTIME</string>
    <string name="button_create_new_account">Create New Account</string>
    <string name="new_account">New Account</string>
    <string name="des_new_account">Create your account to use Q-Wash</string>
    <string name="hint_full_name">Full Name</string>
    <string name="or_sign_up_with">Sign up with</string>
    <string name="rd_car_minivan">MEDIUM</string>
    <string name="rd_car_city_car">SMALL</string>
    <string name="rd_car_suv">BIG</string>
    <string name="rd_motocycle_under_150">SMALL</string>
    <string name="rd_motocycle_150">MEDIUM</string>
    <string name="rd_motocycle_above_150">BIG</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_order_washer">ORDER WASHER</string>
    <string name="desc_fitur_service"><![CDATA[Our washer is equipped with tool & technique to wash your car use the taps provided by customer.]]></string>
    <string name="rd_exterior_wash">Exterior Wash</string>
    <string name="rd_tires_shine">Tires Shine</string>
    <string name="rd_fullbody_wash">Full Body</string>
    <string name="rd_perfumed">Perfurmed</string>
    <string name="rd_interior_vaccum">Interior Vacuum</string>
    <string name="note_waterless">*Waterless only for cars dusty, but not muddy.</string>
    <string name="rd_waterless">Waterless</string>
    <string name="please_wait">Please wait …</string>
    <string name="verification_title">Masukkan kode verifikasi</string>
    <string name="verification_desc">Cek kode verifikasi yang sudah dikirimkan ke nomormu  %1$s Tuliskan di sini:</string>
    <string name="btn_verification_code">Verification</string>
    <string name="resend_the_text">resend</string>
    <string name="change_number">change number</string>
    <string name="please_input_verification_code">Please Input verification code !</string>
    <string name="resend_code_loading">Resend Code …</string>
    <string name="verify_code_loading">Verify Code …</string>
    <string name="phone">Phone</string>
    <string name="save_and_verify"><![CDATA[Save & Verify]]></string>
    <string name="change_number_to_verify_code">Change number to verify code</string>
    <string name="must_input_diff_number">You must input different phone number</string>
    <string name="change_number_loading">Change Number …</string>
    <string name="lengt_phone_val">Phone number must be 6 digits minimum and 20 digits maximum</string>

    <string name="agree_term_and_condition_qwash">Saya setuju dengan syarat dan ketentuan di Qwash</string>
    <string name="ok">OK</string>
    <string name="info_registration">Anda harus mencentang pernyataan setuju sebelum melakukan submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="val_full_name">Fill your name</string>
    <string name="hint_indentify_address">Indentify Address …</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="january">Januari</string>
    <string name="february">Februari</string>
    <string name="march">Maret</string>
    <string name="april">April</string>
    <string name="may">Mei</string>
    <string name="june">Juni</string>
    <string name="july">Juli</string>
    <string name="august">Agustus</string>
    <string name="september">September</string>
    <string name="october">Oktober</string>
    <string name="november">November</string>
    <string name="december">Desember</string>
    <string name="desc_change_password">Verification code to change your password</string>
    <string name="desc_request_new_password">Request new password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New password</string>
    <string name="val_new_password_length">New password must be at least 5 chars</string>
    <string name="request_new_password_action">Request …</string>
    <string name="change_password_action">Change Password …</string>
    <string name="full_name">Full Name</string>
    <string name="request">Request</string>
    <string name="email">Email</string>
    <string name="rate_qwash_app">Rate Qwash App</string>
    <string name="beta">BETA</string>
    <string name="title_activity_request_forgot_password">Request Forgot Password</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="request_forgot_password_action">Request ...</string>
    <string name="desc_forgot_password">Reset Password</string>
    <string name="reset_password_action">Reset Password ...</string>
    <string name="title_activity_verification_code_forgot_password">Verification Code</string>
    <string name="reset">Reset</string>
    <string name="verification_code_desc">Cek kode verifikasi yang sudah dikirimkan ke nomormu. Tuliskan di sini:</string>
    <string name="desc_request_forgot_password">Request forgot password</string>
    <string name="notification">Notification</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="my_account">My Account</string>
    <string name="rate_your_wash">RATE YOUR WASH</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="submit">SUBMIT</string>
    <string name="sms">SMS</string>
    <string name="call">CALL</string>
    <string name="price">PRICE</string>
    <string name="what_you_ll_get">WHAT YOU\'LL GET</string>
    <string name="select_vehicle">SELECT VEHICLE</string>
    <string name="whaser">Whaser</string>
    <string name="rate_by_you">Rate by You</string>
    <string name="add_home">Add Home</string>
    <string name="add_work">Add Work</string>
    <string name="small">SMALL</string>
    <string name="medium">MEDIUM</string>
    <string name="big">BIG</string>
    <string name="change_language">Change Language</string>
    <string name="indonesia">Indonesia</string>
    <string name="english">English</string>

</resources>
