<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.LoginUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/gambar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/logo" />

        </LinearLayout>


        <com.ad.sample.ui.widget.RobotoBoldTextView
            android:textColor="@color/black_333333"
            android:id="@+id/label_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gambar"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in" />


        <com.ad.sample.ui.widget.RobotoRegularEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_signin"
            android:layout_marginTop="10dp"
            android:hint="@string/email" />


        <com.ad.sample.ui.widget.RobotoRegularEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="10dp"
            android:hint="@string/password" />

        <com.ad.sample.ui.widget.RobotoRegularButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="10dp"
            android:text="@string/button_login"
            style="@style/btn_blue"/>

        <TextView
            android:id="@+id/label_sign_in_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/label_sign_with"
            android:textColor="@color/black_333333"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/aut_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_sign_in_with"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_facebook"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@android:color/white"
                app:elevation="1dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_google_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@android:color/white"
                app:elevation="1dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aut_login"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/black_333333" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/forgot_password"
                android:textColor="@color/black_333333" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>