<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_car_wash"
    android:fillViewport="true"
    tools:context="com.qwash.user.ui.activity.RegisterUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_marginTop="25dp"
                android:src="@drawable/logowasher" />

            <com.qwash.user.ui.widget.RobotoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/new_account"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.qwash.user.ui.widget.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/des_new_account"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/sembilah_puluh_persen_white"
                android:orientation="vertical">

                <com.qwash.user.ui.widget.RobotoRegularEditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_full_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="@dimen/activity_half_vertical_margin"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/activity_half_vertical_margin"
                    android:layout_marginRight="@dimen/activity_half_vertical_margin"
                    android:background="@color/divider" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="@dimen/activity_half_vertical_margin"
                        android:layout_marginRight="@dimen/activity_half_vertical_margin"
                        android:src="@drawable/flag_id" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:lines="1"
                        android:paddingBottom="@dimen/activity_half_vertical_margin"
                        android:paddingTop="@dimen/activity_half_vertical_margin"
                        android:text="+62"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="14sp" />

                    <com.qwash.user.ui.widget.RobotoRegularEditText
                        android:id="@+id/no_telp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:digits="1234567890"
                        android:hint="@string/hint_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="@dimen/activity_half_vertical_margin"
                        android:textSize="16sp" />

                </LinearLayout>

                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/sembilah_puluh_persen_white"
                android:orientation="vertical">

                <com.qwash.user.ui.widget.RobotoRegularEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/activity_half_vertical_margin"
                    android:textSize="16sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/activity_half_vertical_margin"
                    android:layout_marginRight="@dimen/activity_half_vertical_margin"
                    android:background="@color/divider" />


                <com.qwash.user.ui.widget.RobotoRegularEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/activity_half_vertical_margin"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/activity_half_vertical_margin"
                    android:layout_marginRight="@dimen/activity_half_vertical_margin"
                    android:background="@color/divider" />

                <com.qwash.user.ui.widget.RobotoRegularEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/activity_half_vertical_margin"
                    android:textSize="16sp" />
            </LinearLayout>


            <CheckBox
                android:id="@+id/cb_agree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/agree_term_and_condition_qwash"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <com.qwash.user.ui.widget.RobotoRegularButton
                android:id="@+id/btn_new_account"
                style="@style/btn_blue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:text="@string/button_create_new_account" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <com.qwash.user.ui.widget.RobotoRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/layout_btn_register_alternatif"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/or_sign_up_with"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/layout_btn_register_alternatif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/btn_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        app:backgroundTint="@color/white"
                        app:elevation="1dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/btn_google_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        app:backgroundTint="@color/white"
                        app:elevation="1dp" />
                </LinearLayout>
            </RelativeLayout>

            <com.qwash.user.ui.widget.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/term_login"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>